<resources>
    <string name="app_name">Investment Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simple_solution_for_your_budget">Simple solution for your budget.</string>
    <string name="counter_and_distribute_the_income_correctly">Counter and distribute the income correctly...</string>
    <string name="continuee">Continue</string>
    <string name="_5000">+5000</string>
    <string name="salary">Salary</string>
    <string name="salary_for_august">Salary for August</string>
    <string name="invest_db">invest_db</string>
    <string name="monday_9_novemeber">MONDAY 9 NOVEMEBER</string>
    <string name="account_balance">Account Balance</string>
    <string name="food">Food</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="how_much">How much?</string>
    <string name="category">Category</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="Transactions">Transactions</string>
    <string name="Month">Month</string>
    <string name="all">All</string>
    <string name="year">Year</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="description">Description</string>
    <string name="pick_your_date">Pick your date</string>
    <string name="shopping">shopping</string>
    <string name="_10_00am">10:00AM</string>
    <string name="income_">Income</string>
    <string name="expense_">Expense</string>
    <string name="_25000">25000</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="month">month</string>
    <string name="all_">all</string>
    <string name="today_">today</string>
    <string name="week_">week</string>
    <string name="month_">month</string>
    <string name="year_">year</string>
    <string name="eeee_d_mmmm">EEEE d MMMM</string>
    <string name="yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="hh_mm_a">hh:mm a</string>
    <string name="yyyy_MM_dd">yyyy-MM-dd</string>
    <string name="salary_">Salary</string>
    <string name="business">Business</string>
    <string name="investment">Investment</string>
    <string name="transport_">Transport</string>
    <string name="Other">Other</string>
    <string name="search">Search</string>
    <string name="selectedtimefilter">selectedTimeFilter</string>
    <string name="no_investments_to_display">No investments to display</string>
    <string name="v">v</string>
    <string name="transaction_added">Transaction Added!</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="dont_start_from_zero">dont  start from zero</string>
    <string name="_556809">556809</string>
    <string name="_9400_0">9400.0</string>
    <string name="android_webkit">android.webkit.</string>
    <string name="datepicker">datePicker</string>
    <string name="expens_e">Expense</string>
    <string name="hh_mm_ss">HH:mm:ss</string>
    <string name="hh_mm_aa">hh:mm a</string>
    <string name="_0_0">0.0</string>
    <string name="financialreport">Financial Report</string>
    <string name="_0vvvvv">₹0vvvvv</string>
    <string name="category_name">Category Name</string>
    <string name="sans_serif_medium">sans-serif-medium</string>
    <string name="expense__">Expense</string>
</resources>